# scp-clone

./: CMakeLists.txt
resources/: fragment-shader.glsl  vertex-shader.glsl
src/: ColladaMeshLoader.cpp  ColladaMeshLoader.h  Common.cpp  Common.h  GLUtils.cpp  GLUtils.h  GameController.cpp  GameController.h  IGameController.h  MainWindow.cpp  MainWindow.h  PerformanceManager.cpp  PerformanceManager.h  SDLUtils.h  ScpMeshCollection.cpp  ScpMeshCollection.h  ShaderUtils.cpp  ShaderUtils.h  Textures.cpp  Textures.h  main.cpp
